Changed compatibility to work with java 8